--- a/cinetpay.html
+++ b/cinetpay.html
@@ -21,7 +21,7 @@
                 apikey: '102219127563b7f7c53a41e9.62135970',//   YOUR APIKEY
                 site_id: '126127',//YOUR_SITE_ID
                 notify_url: 'http://mondomaine.com/notify/',
-                mode: 'PRODUCTION'
+                mode: 'SANDBOX'
             });
             CinetPay.getCheckout({
                 transaction_id: Math.floor(Math.random() * 100000000).toString(), // YOUR TRANSACTION ID
@@ -33,7 +33,7 @@
                 customer_name: "Joe",//Le nom du client
                 customer_surname: "Down",//Le prenom du client
                 customer_email: "down@test.com",//l'email du client
-                customer_phone_number: "088767611",//l'email du client
+                customer_phone_number: "671234567",//l'email du client
                 customer_address: "BP 0024",//addresse du client
                 customer_city: "Antananarivo",// La ville du client
                 customer_country: "CM",// le code ISO du pays
