--- a/cinetpay.html
+++ b/cinetpay.html
@@ -21,7 +21,7 @@
                 apikey: '102219127563b7f7c53a41e9.62135970',//   YOUR APIKEY
                 site_id: '126127',//YOUR_SITE_ID
                 notify_url: 'http://mondomaine.com/notify/',
-                mode: 'SANDBOX'
+                mode: 'PRODUCTION'
             });
             CinetPay.getCheckout({
                 transaction_id: Math.floor(Math.random() * 100000000).toString(), // YOUR TRANSACTION ID
